--- a/index.css
+++ b/index.css
@@ -30,5 +30,6 @@ img {
 
 img:hover {
   transform: scale(1.1);
-  transition: transform 0.5s ease-in-out;
+  width: 30%;
+  transition: all 1s ease-in;
 }
