--- a/index.css
+++ b/index.css
@@ -22,14 +22,13 @@ body {
 }
 
 img {
-  max-width: 50%;
+  max-width: 30%;
   height: auto;
   margin-inline: 25vw;
-  margin-block: 15vh;
+  margin-block: 25vh;
 }
 
 img:hover {
-  transform: scale(1.1);
-  width: 30%;
+  transform: rotate(20deg) scale(1.3) translate(10vw, 10vh) skew(10deg, 10deg);
   transition: all 1s ease-in;
 }
