--- a/index.css
+++ b/index.css
@@ -26,9 +26,19 @@ img {
   height: auto;
   margin-inline: 25vw;
   margin-block: 25vh;
+  animation: slideIn 1s ease-in forwards;
 }
 
 img:hover {
-  transform: rotate(20deg) scale(1.3) translate(10vw, 10vh) skew(10deg, 10deg);
+  transform: rotate(15deg) scale(1.2) translate(10vw, 10vh);
   transition: all 1s ease-in;
+}
+
+@keyframes slideIn {
+    from {
+        transform: translateX(-100%);
+    }
+    to {
+        transform: translateX(0);
+    }
 }
